# dflynav

./: .gitignore  .project  .pydevproject  README  README.md
src/: Df_ActionButtons.py  Df_Bugreport.py  Df_Cmd.py  Df_Config.py  Df_Dialog.py  Df_Dragonfly.py  Df_Exif.py  Df_Find.py  Df_GlobalButtons.py  Df_Gui.py  Df_Icon.py  Df_Job.py  Df_Main.py  Df_Mainwin.py  Df_Panel.py  Df_Preview.py  Df_StatusList.py  Df_UiConfig.py  Df_UiDialog.py  Df_UiFind.py  Df_UiHelp.py  Df_UiJobstatus.py  Df_UiMainwin.py  Df_UiPreview.py  Dragonfly Navigator.lnk  TODO  TODO.txt  build  buildlinux  buildrc  buildrc.sh  buildwin  buildwin_pyinstaller  config.ui  control  control.pre  df_openwith  df_openwith_kde  dialog.ui  dragonfly  (+21 more)
src/3pp/ExifRead-2.3.2.dist-info/: METADATA  RECORD
src/3pp/cykooz.heif-0.11.dist-info/: METADATA  RECORD  top_level.txt
src/3pp/cykooz.heif-0.12.dist-info/: METADATA  RECORD  WHEEL
src/3pp/cykooz.heif.libs/: libde265-a7d775a2.so.0.1.1
src/3pp/cykooz/heif/: __init__.py  errors.py  image.py  pil.py  typing.py
src/3pp/inotify_simple-1.3.5.dist-info/: RECORD
src/3pp/pillow-11.2.1.dist-info/: RECORD  WHEEL
src/3pp/pillow_heif-0.22.0.dist-info/: METADATA  RECORD  WHEEL
src/3pp/pillow_heif.libs/: libheif-2acbb720.so.1.19.7
src/icons/: dragonfly-complete.xcf  dragonfly-complete10.xcf  dragonfly-complete2.xcf  dragonfly-complete3.xcf  dragonfly-complete4.xcf  dragonfly-complete5.xcf  dragonfly-complete6.xcf  dragonfly-complete7.xcf  dragonfly-complete8.xcf  dragonfly-complete9.xcf  webheader.xcf
src/license/: genkey.py
src/openwith/: openwith  openwith.gtk  openwith.qt
src/openwith/gtk/: CMakeLists.txt  README.md  gtk-open-with.cpp
src/openwith/qt/: CMakeLists.txt  main.cpp
src/res/: dragonfly.aip  helptext.html  license.html
src/scripts/: cause_auto_refresh.sh
src/vfs/: __init__.py  cppv  vfs_apps_Windows.py  vfs_asyncJobs.py  vfs_fs.py  vfs_fsNotify.py  vfs_fsNotify_Linux.py  vfs_fsNotify_Windows.py  vfs_node.py  vfs_root.py
